Add Facebook integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Consens.us</string>
+    <string name="fb_login_protocol_scheme">fb1827136727519821</string>
 </resources>
