Add activities to mainifest, add string titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="event_name">EVENT NAME</string>
     <string name="tv_location">Location</string>
     <string name="date">date</string>
-    <string name="title_activity_create_new_event">CreateNewEventActivity</string>
-    <string name="title_activity_event_details">EventDetails</string>
+    <string name="title_activity_create_new_event">Create New Event</string>
+    <string name="title_activity_events">Events</string>
+    <string name="title_activity_event_details">Event Details</string>
     <string name="description">Description</string>
 </resources>
