--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Consens.us</string>
     <string name="fb_login_protocol_scheme">fb1827136727519821</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Log Out</string>
     <string name="event_name">EVENT NAME</string>
     <string name="tv_location">Location</string>
     <string name="date">date</string>
