--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,13 @@
     <string name="fb_login_protocol_scheme">fb1827136727519821</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log Out</string>
-    <string name="event_name">EVENT NAME</string>
+    <string name="poll_name">POLL NAME</string>
     <string name="tv_location">Location</string>
     <string name="date">date</string>
-    <string name="title_activity_create_new_event">Create New Event</string>
-    <string name="title_activity_events">Events</string>
-    <string name="title_activity_event_details">Event Details</string>
+    <string name="title_activity_create_new_poll">Create New Poll</string>
+    <string name="title_activity_polls">Polls</string>
+    <string name="title_activity_poll_details">Poll Details</string>
     <string name="description">Description</string>
-    <string name="title_activity_groups">GroupsActivity</string>
+    <string name="title_activity_groups">Groups</string>
+    <string name="none_of_the_above">None of the Above</string>
 </resources>
