--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="description">Description</string>
     <string name="title_activity_groups">Groups</string>
     <string name="none_of_the_above">None of the Above</string>
+    <string name="poll_title">POLLS</string>
+    <string name="edit_group">Edit Group</string>
+    <string name="add_friends">Add Friends</string>
+    <string name="group_name_hint">Enter group name here...</string>
+    <string name="group_name">Group Name</string>
+    <string name="save">Save</string>
+    <string name="delete_group">Delete Group</string>
 </resources>
