--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="poll_title">POLLS</string>
     <string name="edit_group">Edit Group</string>
     <string name="add_friends">Add Friends</string>
-    <string name="group_name_hint">Enter group name here...</string>
+    <string name="group_name_hint">Group name (ex: Party Group!)</string>
     <string name="group_name">Group Name</string>
     <string name="save">Save</string>
     <string name="delete_group">Delete Group</string>
