--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="set_date">Set a date</string>
     <string name="snackbar_OK_text">You are online, continue....</string>
     <string name="snackbar_NOTOK_text">You are offline, turn on WIFI in settings....</string>
-
+    <string name="poll_option_placeholder">You haven\'t created any locations to vote on yet.</string>
 </resources>
