--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,6 @@
     <string name="pick_date">Pick a date</string>
     <string name="set_date">Set a date</string>
     <string name="snackbar_OK_text">You are online, continue....</string>
-    <string name="snackbar_NOTOK_text">You are offline, turn on WIFI in settings....</string>
+    <string name="snackbar_NOTOK_text">You are offline, turn WIFI on in </string>
     <string name="poll_option_placeholder">You haven\'t created any locations to vote on yet.</string>
 </resources>
