Set selected location for poll

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="poll_name_exists_msg">Poll with this name already exists</string>
     <string name="create_group">create group</string>
     <string name="save_changes">save changes</string>
+    <string name="all_members_voted">All Members Voted</string>
+    <string name="event_scheduled">Event Scheduled</string>
 
 
 </resources>
